# todo-pomodoro

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  dbops.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: dbops.ts  index.ts  pomoduro.tsx  todolist.tsx  types.ts
