[package]
authors = ["yuxuetr"]
description = "To-Do"
edition = "2021"
name = "pomodorotimer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-sql = { features = ["sqlite"], version = "2" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
